<resources>
    <string name="app_name">Confab</string>
    <string name="create_new_account">Yeni Hesap Oluştur</string>
    <string name="i_have_account">Hesabım Var</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">E Mail</string>
    <string name="password">Şifre</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="login">Hoş Geldiniz</string>
    <string name="passwordLogin">Şifre</string>
    <string name="userLogin">Giriş Yap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Çıkış Yap</string>
</resources>
